--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -355,23 +355,31 @@
     &__items {
         display: flex;
         flex-wrap: wrap;
-        row-gap: toRem(20);
-        margin: 0 toRem(-10);
+        gap: toRem(20);
     }
     // .sale__column {
     &__column {
+        /*
         flex-grow: 1;
         min-width: toRem(280);
         flex-basis: 33.3333%;
         padding: 0 toRem(10);
         min-height: toRem(393);
-        @media (min-width: toEm(1249.98)) {
-            max-width: 50%;
-        }
+        
+        */
     }
     // .sale__item
     &__item {
-        min-height: 100%;
+        min-height: toRem(393);
+        flex-grow: 1;
+        flex-basis: toRem(300);
+
+        @media (min-width: toEm(329.98)) {
+            flex-shrink: 0;
+        }
+        @media (min-width: toEm(1249.98)) {
+            max-width: 50%;
+        }
     }
 }
 .item-sale {
@@ -724,6 +732,8 @@
     &__avatar {
         aspect-ratio: 1 / 1;
         flex: 0 0 toRem(58);
+        width: toRem(58);
+        object-fit: cover;
     }
     // .slide-review__rating
     &__rating {}
