--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,72 @@ textarea {
   cursor: default;
 }
 
+.rating {
+  display: inline-block;
+}
+.rating__items {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 0.4375rem;
+  height: 1.25rem;
+  overflow: hidden;
+}
+@media (any-hover: hover) {
+  .rating--set .rating__items:hover .rating__item {
+    background: url("../img/icons/star-active.svg") 0 0/1.25rem;
+  }
+}
+.rating__item {
+  position: relative;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 1.25rem;
+          flex: 0 0 1.25rem;
+  width: 1.25rem;
+  background: url("../img/icons/star.svg") 0 0/1.25rem no-repeat;
+}
+.rating__item span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 1.25rem;
+  background: url("../img/icons/star-active.svg") 0 0/1.25rem no-repeat;
+}
+.rating__item.active {
+  background: url("../img/icons/star-active.svg") 0 0/1.25rem no-repeat;
+}
+.rating__item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 0.4375rem;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+}
+@media (any-hover: hover) {
+  .rating--set .rating__item:hover ~ .rating__item {
+    background: url("../img/icons/star.svg") 0 0/1.25rem no-repeat;
+  }
+  .rating--set .rating__item:hover ~ .rating__item span {
+    display: none;
+  }
+}
+.rating__input {
+  aspect-ratio: 1/1;
+  width: 100%;
+  opacity: 0;
+}
+.rating--set .rating__input {
+  cursor: pointer;
+}
+
 .header {
   border-bottom: 0.0625rem solid #BEBCBD;
   position: sticky;
@@ -2453,26 +2519,36 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  row-gap: 1.25rem;
-  margin: 0 -0.625rem;
+  gap: 1.25rem;
 }
 .sale__column {
+  /*
+  flex-grow: 1;
+  min-width: toRem(280);
+  flex-basis: 33.3333%;
+  padding: 0 toRem(10);
+  min-height: toRem(393);
+
+  */
+}
+.sale__item {
+  min-height: 24.5625rem;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  min-width: 17.5rem;
-  -ms-flex-preferred-size: 33.3333%;
-      flex-basis: 33.3333%;
-  padding: 0 0.625rem;
-  min-height: 24.5625rem;
+  -ms-flex-preferred-size: 18.75rem;
+      flex-basis: 18.75rem;
 }
-@media (min-width: 78.12375em) {
-  .sale__column {
-    max-width: 50%;
+@media (min-width: 20.62375em) {
+  .sale__item {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
   }
 }
-.sale__item {
-  min-height: 100%;
+@media (min-width: 78.12375em) {
+  .sale__item {
+    max-width: 50%;
+  }
 }
 
 .item-sale {
@@ -3218,6 +3294,9 @@ textarea {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 3.625rem;
           flex: 0 0 3.625rem;
+  width: 3.625rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .slide-review__title {
   font-size: 1.375rem;
