--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -4,7 +4,7 @@
         display: flex;
         align-items: flex-start;
     }
-    // .catalog__filter
+    // .catalog__filtergit
     &__filter {
         flex: 0 0 toRem(295);
     }
