--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -600,7 +600,11 @@
     // .products__container
     &__container {}
     // .products__title
-    &__title {}
+    &__title {
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 30, 20);
+        }
+    }
     // .products__items
     &__items {
         display: grid;
