--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,15 +1,29 @@
 .product {
     // .product__main
-    &__main {}
+    &__main {
+        @include adaptiveValue("margin-bottom", 100, 40);
+    }
+    // .product__description
+    &__description {
+        @include adaptiveValue("margin-bottom", 100, 40);
+    }
+    // .product__products
+    &__products {
+        @include adaptiveValue("margin-bottom", 100, 40);
+    }
 }
 .main-product {
     // .main-product__container
     &__container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        @media (min-width: toEm(991.98)) {
+            display: flex;
+            align-items: flex-start;
+            flex-direction: row-reverse;
+        }
     }
     // .main-product__images
     &__images {
+        flex: 0 1 50%;
         display: flex;
         align-items: center;
         gap: toRem(34);
@@ -30,6 +44,9 @@
     // .main-product__slider
     &__slider {
         flex: 1 1 auto;
+        @media (max-width: toEm(991.98)) {
+            margin-right: toRem(-15);
+        }
     }
     // .main-product__wrapper
     &__wrapper {}
@@ -43,8 +60,20 @@
     }
     // .main-product__body
     &__body {
-        @include adaptiveValue("padding-left", 74, 15, 2, $containerWidth, 767.98);
+        display: grid;
+        @include adaptiveValue("gap", 35, 25);
+        flex: 0 1 50%;
+        @include adaptiveValue("padding-left", 74, 25, 2, $containerWidth, 991.98);
         padding-top: toRem(30);
+        @media (max-width: toEm(991.98)) {
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            @include adaptiveValue("margin-bottom", 100, 40);
+            > * {
+                flex: 1 1 toRem(280);
+            }
+        }
     }
     // .main-product__thumb-slider
     &__thumb-slider {
@@ -52,6 +81,73 @@
         padding-top: toRem(25);
         padding-bottom: toRem(25);
     }
+    // .main-product__breadcrumbs
+    &__breadcrumbs {
+        flex: 1 1 100%;
+    }
+    // .main-product__title
+    &__title {
+        @extend %CS;
+        @include adaptiveValue("font-size", 34, 28);
+        font-weight: 700;
+        color: $darkColor;
+        line-height: 140%;
+    }
+    // .main-product__rating-comments
+    &__rating-comments {
+        display: flex;
+        column-gap: toRem(25);
+        row-gap: toRem(15);
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    // .main-product__comments
+    &__comments {
+        display: flex;
+        gap: toRem(15);
+        align-items: center;
+        font-size: toRem(18);
+        font-weight: 500;
+        transition: all 0.3s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $purplColor;
+            }
+        }
+    }
+    // .main-product__sizes
+    &__sizes {}
+    // .main-product__colors
+    &__colors {}
+    // .main-product__footer
+    &__footer {
+        flex: 1 1 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: toRem(25);
+    }
+    // .main-product__button
+    &__button {
+        min-width: toRem(200);
+        span {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: toRem(12);
+        }
+    }
+    // .main-product__price
+    &__price {
+        padding: toRem(16) toRem(40);
+        font-weight: 700;
+        font-size: toRem(18);
+        color: $darkColor;
+        border: toRem(1) solid $darkColor;
+        border-radius: toRem(8);
+    }
+    // .main-product__info
+    &__info {}
 }
 .thumb-slider {
     display: grid;
@@ -113,4 +209,254 @@
         &--down {}
     }
 
+}
+.sizes-product {
+    // .sizes-product__header
+    &__header {
+        display: flex;
+        column-gap: toRem(20);
+        row-gap: toRem(15);
+        align-items: center;
+        flex-wrap: wrap;
+        &:not(:last-child) {
+            margin-bottom: toRem(25);
+        }
+    }
+    // .sizes-product__title
+    &__title {
+        font-size: toRem(18);
+        font-weight: 600;
+        color: $darkColor;
+
+    }
+    // .sizes-product__guide
+    &__guide {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: toRem(10);
+        align-items: center;
+        font-size: toRem(18);
+        font-weight: 600;
+        &::before {
+            font-size: toRem(10);
+        }
+        transition: all 0.3s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $purplColor;
+            }
+        }
+    }
+    // .sizes-product__items
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: toRem(15);
+    }
+    // .sizes-product__item
+    &__item {
+        position: relative;
+        flex: 0 0 toRem(38);
+        height: toRem(38);
+        border-radius: toRem(12);
+        border: toRem(1.5) solid #BEBCBD;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: toRem(14);
+        font-weight: 500;
+        color: $darkColor;
+        transition: all 0.3s;
+        &:has(input:checked) {
+            background-color: $darkColor;
+            color: #fff;
+            border-color: $darkColor;
+        }
+        @media (any-hover: hover) {
+            &:hover {
+                background-color: $darkColor;
+                color: #fff;
+                border-color: $darkColor;
+            }
+        }
+    }
+    // .sizes-product__input
+    &__input {
+        cursor: pointer;
+        opacity: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+    }
+}
+.colors-product {
+    // .colors-product__title
+    &__title {
+        @extend .sizes-product__title;
+        &:not(:last-child) {
+            margin-bottom: toRem(25);
+        }
+    }
+    // .colors-product__items
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: toRem(15);
+    }
+    // .colors-product__item
+    &__item {
+        position: relative;
+        flex: 0 0 toRem(22);
+        height: toRem(22);
+        border-radius: 50%;
+        background-color: var(--color);
+        &:has(input:checked) {
+            &::before {
+                transform: scale(1.3);
+            }
+
+        }
+        &::before {
+            transition: all 0.3s;
+            border-radius: 50%;
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transform: scale(.9);
+            border: toRem(1) solid var(--color);
+        }
+    }
+    // .colors-product__input
+    &__input {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        cursor: pointer;
+        z-index: 2;
+    }
+}
+.info-product {
+    border-top: toRem(1) solid #BEBCBD;
+    padding-top: toRem(40);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: toRem(20);
+    // .info-product__item
+    &__item {
+        display: flex;
+        align-items: center;
+        gap: toRem(15);
+        color: $darkColor;
+        font-weight: 500;
+        font-size: toRem(18);
+        &::before {
+            flex: 0 0 toRem(44);
+            height: toRem(44);
+            width: toRem(44);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            background-color: #f6f6f6;
+        }
+    }
+}
+.description {
+    // .description__container
+    &__container {}
+    // .description__title
+    &__title {
+        &:not(:last-child) {
+            @include adaptiveValue("margin-bottom", 30, 20);
+        }
+    }
+    // .description__body 
+    &__body {
+        @media (min-width: toEm(991.98)) {
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
+    }
+    // .description__tabs
+    &__tabs {
+        flex: 0 0 50%;
+        @include adaptiveValue("margin-bottom", 40, 20, 3, 991.98, 320);
+    }
+    // .description__video
+    &__video {
+        flex: 0 0 50%;
+        width: 100%;
+        @include adaptiveValue("padding-left", 74, 25, 2, $containerWidth, 991.98);
+        aspect-ratio: 532 / 328;
+        object-fit: cover;
+    }
+}
+.product-description {
+    // .product-description__text
+    &__text {
+        &:not(:last-child) {
+            margin-bottom: toRem(30);
+        }
+        p {
+            line-height: 1.56;
+            &:not(:last-child) {
+                margin-bottom: toRem(15);
+            }
+        }
+    }
+    // .product-description__table
+    &__table {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(toRem(200), auto));
+        border-radius: toRem(12);
+        position: relative;
+        background-color: rgba(246, 246, 246, 0.6);
+        @media (max-width: toEm(479.98)) {
+            margin: 0 toRem(-15);
+        }
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+        }
+        &::before {
+            right: 0;
+            top: 0;
+            width: toRem(1);
+            height: 100%;
+            background-color: rgba(246, 246, 246, 0.6);
+        }
+        &::after {
+            bottom: 0;
+            width: 100%;
+            left: 0;
+            height: toRem(1);
+            background-color: rgba(246, 246, 246, 0.6);
+        }
+    }
+    // .product-description__item
+    &__item {
+        background-color: rgba(246, 246, 246, 0.6);
+        display: grid;
+        gap: toRem(12);
+        border-right: toRem(1) solid rgba(190, 188, 188, 0.6);
+        border-bottom: toRem(1) solid rgba(190, 188, 188, 0.6);
+        @include adaptiveValue("padding-top", 17, 15);
+        @include adaptiveValue("padding-bottom", 17, 15);
+        @include adaptiveValue("padding-left", 45, 25);
+        @include adaptiveValue("padding-right", 45, 25);
+    }
+    // .product-description__label
+    &__label {}
+    // .product-description__value
+    &__value {
+        color: $darkColor;
+        font-weight: 500;
+    }
 }
